// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonContainer /> shows "start" by default 1`] = `
<ButtonArea
  onClick={[Function]}
  text="start"
/>
`;

exports[`<ButtonContainer /> shows "start" when the game has stopped 1`] = `
<ButtonArea
  onClick={[Function]}
  text="start"
/>
`;

exports[`<ButtonContainer /> shows "stop" when the game has started 1`] = `
<ButtonArea
  onClick={[Function]}
  text="stop"
/>
`;
